# CollidingCircles

./: .gitignore  CMakeLists.txt  README.md  build.ps1  runcmake.ps1
dependencies/glew/: glew.pc
includes/: BloomRenderer.h  CircleCreator.h  CircleCreatorMenu.h  CircleCreatorSettings.h  CircleObject.h  CircleQuadNode.h  CircleQuadTree.h  CircleQuadVisualizer.h  CircleRenderData.h  CircleRenderer.h  CircleRendererInstanced.h  CircleUniformBuffer.h  CollisionDetectionGrid.h  FlowControlMenu.h  FlowControlParams.h  FrameTimeTracker.h  GravityCalculator.h  GridRenderer.h  IMenu.h  IPatternGenerator.h  ISubMenu.h  InputManager.h  InstructionsMenu.h  KeyInputEvent.h  LineObject.h  LineRenderer.h  MouseInputEvent.h  PhysicsManager.h  PhysicsSettingsMenu.h  PhysicsSettingsParams.h  RendererManager.h  ScreenObject.h  SettingsWindow.h  ShaderProgram.h  ShaderSettingsMenu.h  ShaderSettingsParams.h  Simulation.h  SpiralPatternGenerator.h  SpiralPatternParams.h  SpiralPatternSubMenu.h  (+4 more)
res/shader/: downsampler.frag  grid.frag  grid.vert  line.vert  simple.frag  simple.vert  simpleFinalizedBloom.frag  simpleFinalizedBloom.vert  simpleInstanced.frag  simpleInstanced.vert  simpleInstancedGaussian.frag  simpleInstancedGaussian.vert  upsampler.frag
src/: BloomRenderer.cpp  CircleCreator.cpp  CircleCreatorMenu.cpp  CircleObject.cpp  CircleQuadNode.cpp  CircleQuadTree.cpp  CircleQuadVisualizer.cpp  CircleRenderer.cpp  CircleRendererInstanced.cpp  CircleUniformBuffer.cpp  CollisionDetectionGrid.cpp  FlowControlMenu.cpp  FrameTimeTracker.cpp  GravityCalculator.cpp  GridRenderer.cpp  InputManager.cpp  InstructionsMenu.cpp  LineObject.cpp  LineRenderer.cpp  PhysicsManager.cpp  PhysicsSettingsMenu.cpp  RendererManager.cpp  ScreenObject.cpp  SettingsWindow.cpp  ShaderProgram.cpp  ShaderSettingsMenu.cpp  Simulation.cpp  SpiralPatternGenerator.cpp  SpiralPatternSubMenu.cpp  UserInput.cpp  View.cpp  World.cpp  main.cpp
